<resources>
    <string name="app_name">DesafioAula2Ioasys</string>
    <string name="books">Books</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="response_login">Resposta login</string>
    <string name="title_book">The Making of a Manager</string>
    <string name="author">Julie Zhuo</string>
    <string name="description">150 páginas Editora Loyola Publicado em 2020</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="informacoes">Informações</string>
    <string name="paginas">Páginas</string>
    <string name="qtd_paginas">300 paginas</string>
    <string name="editora">Editora</string>
    <string name="publicacao">Publicação</string>
    <string name="idioma">Idioma</string>
    <string name="titulo_original">Título Original</string>
    <string name="isbn_10">ISBN-10</string>
    <string name="isbn_13">ISBN-13</string>
    <string name="resenha_da_editora">RESENHA DA EDITORA</string>
    <string name="pesquisar">Pesquisar</string>
</resources>