<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="104.4dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="194dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/heebo_300"
        android:lineHeight="40dp"
        android:text="@string/books"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_logo"
        app:layout_constraintStart_toEndOf="@+id/image_view_logo"
        app:layout_constraintTop_toTopOf="@+id/image_view_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_logo">

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/background"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_input_email">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/background"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:textColor="#B22E6F"
        android:textSize="12sp"
        android:fontFamily="@font/heebo_500"
        android:backgroundTint="@color/white"
        android:id="@+id/button_sent"
        android:layout_width="85dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="@+id/text_input_password"
        app:layout_constraintEnd_toEndOf="@+id/text_input_password"
        app:layout_constraintTop_toTopOf="@+id/text_input_password" />


    <TextView
        android:id="@+id/text_view_response"
        android:fontFamily="@font/heebo_400"
        android:textSize="14sp"
        android:height="16sp"
        android:gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/response_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_password" />

</androidx.constraintlayout.widget.ConstraintLayout>