<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_book"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="4dp"
    android:clickable="true"
    android:elevation="20dp"
    android:focusable="true"
    android:longClickable="false"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_book"
            android:layout_width="81dp"
            android:layout_height="122dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/image_book_aux"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/heebo_800"
            android:lineHeight="20dp"
            android:lineSpacingExtra="0sp"
            android:text="@string/title_book"
            android:textColor="#333333"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/image_view_book"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_author"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/heebo_400"
            android:lineHeight="20dp"
            android:text="@string/author"
            android:textColor="#AB2680"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/image_view_book"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_description"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/heebo_400"
            android:lineHeight="20dp"
            android:text="@string/description"
            android:textColor="#999999"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/image_view_book"
            app:layout_constraintTop_toBottomOf="@+id/text_view_author" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
